--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@uirouter/angularjs": "^1.0.3",
+    "angular-ui-router": "^1.0.3",
     "angular": "^1.6.6",
     "angular-mocks": "^1.6.6",
     "jasmine-core": "^2.8.0",
